<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <EditText
        android:id="@+id/text_row"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="3dp"
        android:autofillHints="@string/d_hint_auto_dimensions"
        android:ems="10"
        android:hint="@string/d_hint_row"
        android:inputType="number" />

    <EditText
        android:id="@+id/text_column"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/textView8"
        android:autofillHints="@string/d_hint_auto_dimensions"
        android:ems="10"
        android:hint="@string/d_hint_col"
        android:inputType="number" />

    <Button
        android:id="@+id/button_confirm_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignEnd="@+id/text_column"
        android:layout_alignParentStart="true"
        android:layout_marginStart="212dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="0dp"
        android:text="Confirm" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="34dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@+id/text_row"
        android:text="x"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_confirm_difficulty"
        android:layout_alignParentStart="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/d_undo" />

    <EditText
        android:id="@+id/text_undos"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_confirm_difficulty"
        android:layout_alignBottom="@+id/button_confirm_difficulty"
        android:layout_marginStart="27dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/textView9"
        android:ems="10"
        android:inputType="number"
        android:text="@string/d_default_undos"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/et_Url"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_undos"
        android:layout_alignStart="@+id/text_row"
        android:layout_alignEnd="@+id/text_column"
        android:layout_marginStart="0dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="110dp"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/d_url_field"
        android:inputType="textUri"
        android:textAlignment="center" />

    <CheckBox
        android:id="@+id/cb_useImage"
        android:layout_width="169dp"
        android:layout_height="62dp"
        android:layout_below="@+id/et_Url"
        android:layout_alignStart="@+id/text_row"
        android:layout_alignEnd="@+id/et_Url"
        android:layout_marginStart="0dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="0dp"
        android:text="@string/d_cb_use_image"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/button_loadImage"
        android:layout_width="90dp"
        android:layout_height="122dp"
        android:layout_alignStart="@+id/button_confirm_difficulty"
        android:layout_alignTop="@+id/et_Url"
        android:layout_alignEnd="@+id/text_column"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/d_load_image" />

    <ImageView
        android:id="@+id/iv_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_useImage"
        android:layout_alignStart="@+id/cb_useImage"
        android:layout_alignEnd="@+id/button_loadImage"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        app:srcCompat="@drawable/bg_simplebg" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_preview"
        android:layout_alignStart="@+id/cb_useImage"
        android:layout_alignEnd="@+id/button_loadImage"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/d_image_once"
        android:textAlignment="center"
        android:textStyle="bold" />

</RelativeLayout>