<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_simplebg"
    tools:context="fall2018.csc2017.slidingtiles.LaunchCentre">


    <EditText
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_password"
        android:layout_alignEnd="@+id/text_password"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_login"
        android:layout_alignEnd="@+id/button_login"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="15dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="35dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cb_remember"
        android:layout_alignStart="@+id/button_register"
        android:layout_alignEnd="@+id/button_register"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/cb_remember"
        android:layout_width="140dp"
        android:layout_height="51dp"
        android:layout_above="@+id/button_register"
        android:layout_alignStart="@+id/button_register"
        android:layout_alignEnd="@+id/button_register"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="7dp"
        android:text="@string/remember_me"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/button_guest"
        android:layout_alignTop="@+id/cb_remember"
        android:layout_alignEnd="@+id/button_guest"
        android:layout_alignBottom="@+id/cb_remember"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:onClick="loginButtonOnClick"
        android:text="@string/login_user" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="50dp"
        android:onClick="registerButtonOnClick"
        android:text="@string/register" />

    <Button
        android:id="@+id/button_guest"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_register"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="50dp"
        android:onClick="guestButtonOnClick"
        android:text="@string/login_as_guest" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_above="@+id/text_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/ic_gc" />

</RelativeLayout>