<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_simplebg2"
    tools:context="fall2018.csc2017.slidingtiles.GameSelection">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/select_a_game"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/ga_logged_as"
        android:textAlignment="viewStart"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_loggedas"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:layout_toEndOf="@+id/textView5"
        android:text="@string/player"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/button_gameselect1"
        android:layout_width="156dp"
        android:layout_height="156dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="270dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="slidingGameButtonOnClick"
        android:src="@drawable/ic_button1"
        android:text="@string/button" />

    <ImageButton
        android:id="@+id/button_gameselect2"
        android:layout_width="156dp"
        android:layout_height="156dp"
        android:layout_alignTop="@+id/button_gameselect1"
        android:layout_alignBottom="@+id/button_gameselect1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="36dp"
        android:contentDescription="@string/ult_ttt"
        android:onClick="ultTTTGameButtonOnClick"
        android:src="@drawable/ult_icon"
        android:text="@string/button"
        app:srcCompat="@drawable/ult_icon" />

    <ImageButton
        android:id="@+id/button_gameselect3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:onClick="obDodgerGameButtonOnClick"
        android:text="Button"
        app:srcCompat="@drawable/aliengreen" />

    <ImageButton
        android:id="@+id/button_gameselection_scoreboard"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_above="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="168dp"
        android:layout_marginEnd="168dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="scoreboardOnClick"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_scoremarks5lines" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_gameselection_scoreboard"
        android:layout_alignStart="@+id/button_gameselection_scoreboard"
        android:layout_alignEnd="@+id/button_gameselection_scoreboard"
        android:layout_marginStart="-56dp"
        android:layout_marginEnd="-56dp"
        android:layout_marginBottom="10dp"
        android:text="Scoreboard"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />
</RelativeLayout>